--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'version-catalog'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -30,15 +32,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
     implementation(project(":domain"))
     implementation(project(":data"))
     implementation(project(":presentation"))
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation(libs.bundles.hilt)
+    implementation(libs.appcompat.appcompat)
+    implementation(libs.test.ext)
+    implementation(libs.junit.junit)
+    implementation(libs.test.espresso)
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+
 }
