--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 corektx = "1.5.0"
 kotlin = "1.5.30"
 appcompat = "1.0.0"
-material = "1.6.1"
+material = "1.9.0"
 junit = "4.13.2"
 testext = "1.1.1"
 testespresso = "3.4.0"
@@ -12,6 +12,8 @@ hilt = "2.43.2"
 paging = "3.0.1"
 javax = "1"
 retrofit="2.9.0"
+navigation="2.6.0"
+datastore="1.0.0"
 
 [libraries]
 core-ktx = {module="androidx.core:core-ktx", version.ref="corektx"}
@@ -41,6 +43,13 @@ room-compiler = {module = "androidx.room:room-compiler", version.ref="room"}
 retrofit-retrofit = {module = "com.squareup.retrofit2:retrofit", version.ref="retrofit"}
 retrofit-converter-gson = {module = "com.squareup.retrofit2:converter-gson", version.ref="retrofit"}
 
+navigation-fragment-ktx = {module = "androidx.navigation:navigation-fragment-ktx", version.ref="navigation"}
+navigation-ui-ktx = {module = "androidx.navigation:navigation-ui-ktx", version.ref="navigation"}
+navigation-dynamic-features-fragment= {module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref="navigation"}
+navigation-testing = {module = "androidx.navigation:navigation-testing", version.ref="navigation"}
+navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref="navigation"}
+
+datastore-preferences = {module = "androidx.datastore:datastore-preferences", version.ref="datastore"}
 
 [bundles]
 coroutine = ["coroutine-core", "coroutine-android"]
@@ -50,3 +59,4 @@ javax = ["javax-inject"]
 room = ["room-runtime", "room-ktx", "room-paging"]
 kotlin = ["kotlin-stdlib"]
 retrofit = ["retrofit-retrofit", "retrofit-converter-gson"]
+navigation = ["navigation-fragment-ktx", "navigation-ui-ktx", "navigation-dynamic-features-fragment", "navigation-testing", "navigation-compose"]
