--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -32,10 +32,16 @@ android {
 
 dependencies {
     implementation(project(":domain"))
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(libs.appcompat.appcompat)
+    implementation(libs.test.ext)
+    implementation(libs.junit.junit)
+    implementation(libs.test.espresso)
+    implementation(libs.core.ktx)
+    implementation(libs.material.material)
+
+    //navigation
+    implementation(libs.bundles.navigation)
+
+    //hilt
+    implementation(libs.bundles.hilt)
 }
