--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -44,4 +44,11 @@ dependencies {
 
     //hilt
     implementation(libs.bundles.hilt)
+
+    //compose
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+
+    //hilt-navigation-compose
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 }
