--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation(project(":data"))
     implementation(project(":domain"))
     implementation(libs.appcompat.appcompat)
     implementation(libs.test.ext)
