Fix: Kotlin Compiler Version Error

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -67,4 +67,4 @@ room = ["room-runtime", "room-ktx", "room-paging"]
 kotlin = ["kotlin-stdlib"]
 retrofit = ["retrofit-retrofit", "retrofit-converter-gson"]
 navigation = ["navigation-fragment-ktx", "navigation-ui-ktx", "navigation-dynamic-features-fragment", "navigation-testing", "navigation-compose"]
-compose = ["compose-ui-ui", "compose-material-material", "compose-ui-tooling-preview"]
+compose = ["compose-material-material", "compose-ui-tooling-preview"]
