--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.2"
+        kotlinCompilerExtensionVersion = "1.4.0"
+        kotlinCompilerVersion '1.5.30'
     }
     buildFeatures {
         compose = true
@@ -61,6 +62,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation "androidx.compose.ui:ui:1.4.3"
 
     //compose
     implementation 'androidx.activity:activity-compose:1.7.2'
